Bindings/CEGUI/cBuild/include/ClassMultiColumnList.h

// Set the column to be used as the sort key. 
void cegui_mltclmlst_setSortColumnByID(struct hg3dclass_struct * thisclass_c, unsigned int col_id_c);
// Set whether the vertical scroll bar should always be shown, or just when needed. 
void cegui_mltclmlst_setShowVertScrollbar(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set whether the horizontal scroll bar should always be shown, or just when needed. 
void cegui_mltclmlst_setShowHorzScrollbar(struct hg3dclass_struct * thisclass_c, int setting_c);
// Removed the selected state from any currently selected ListboxItem
void cegui_mltclmlst_clearAllSelections(struct hg3dclass_struct * thisclass_c);
// Sets or clears the selected state of the given ListboxItem
void cegui_mltclmlst_setItemSelectState(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * item_c, int state_c);
// Inform the list box that one or more attached ListboxItems have been externally modified, and the list should re-sync its internal state and refresh the display as needed. 
void cegui_mltclmlst_handleUpdatedItemData(struct hg3dclass_struct * thisclass_c);
// Set the width of the specified column header (and therefore the column itself). 
void cegui_mltclmlst_setColumnHeaderWidth(struct hg3dclass_struct * thisclass_c, unsigned int col_idx_c, struct hg3dclass_struct * width_c);
// Set whether user manipulation of the sort column and direction are enabled. 
void cegui_mltclmlst_setUserSortControlEnabled(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set whether the user may size column segments. 
void cegui_mltclmlst_setUserColumnSizingEnabled(struct hg3dclass_struct * thisclass_c, int setting_c);
// Set whether the user may modify the order of the columns. 
void cegui_mltclmlst_setUserColumnDraggingEnabled(struct hg3dclass_struct * thisclass_c, int setting_c);
// Automatically determines the "best fit" size for the specified column and sets the column width to the same. 
void cegui_mltclmlst_autoSizeColumnHeader(struct hg3dclass_struct * thisclass_c, unsigned int col_idx_c);
// Set the ID code assigned to a given row. 
void cegui_mltclmlst_setRowID(struct hg3dclass_struct * thisclass_c, unsigned int row_idx_c, unsigned int row_id_c);
// Constructor for the Multi-column list base class. 
void cegui_mltclmlst_construct(char * type_c, char * name_c, struct hg3dclass_struct * result_c);
// Destructor for the multi-column list base class. 
void cegui_mltclmlst_destruct(struct hg3dclass_struct * thisclass_c);