Bindings/CEGUI/hBuild/HGamer3D/Bindings/CEGUI/ClassMultiColumnList.chs


{- function setSortColumnByID -}
{#fun cegui_mltclmlst_setSortColumnByID as setSortColumnByID 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' } -> `()'  #}

{- function setShowVertScrollbar -}
{#fun cegui_mltclmlst_setShowVertScrollbar as setShowVertScrollbar 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setShowHorzScrollbar -}
{#fun cegui_mltclmlst_setShowHorzScrollbar as setShowHorzScrollbar 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function clearAllSelections -}
{#fun cegui_mltclmlst_clearAllSelections as clearAllSelections 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setItemSelectState -}
{#fun cegui_mltclmlst_setItemSelectState as setItemSelectState 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function handleUpdatedItemData -}
{#fun cegui_mltclmlst_handleUpdatedItemData as handleUpdatedItemData 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setColumnHeaderWidth -}
{#fun cegui_mltclmlst_setColumnHeaderWidth as setColumnHeaderWidth 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setUserSortControlEnabled -}
{#fun cegui_mltclmlst_setUserSortControlEnabled as setUserSortControlEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setUserColumnSizingEnabled -}
{#fun cegui_mltclmlst_setUserColumnSizingEnabled as setUserColumnSizingEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function setUserColumnDraggingEnabled -}
{#fun cegui_mltclmlst_setUserColumnDraggingEnabled as setUserColumnDraggingEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function autoSizeColumnHeader -}
{#fun cegui_mltclmlst_autoSizeColumnHeader as autoSizeColumnHeader 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' } -> `()'  #}

{- function setRowID -}
{#fun cegui_mltclmlst_setRowID as setRowID 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' ,
 fromIntegral `Int' } -> `()'  #}

{- function MultiColumnList -}
{#fun cegui_mltclmlst_construct as new 
{ withCString* `String' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function ~MultiColumnList -}
{#fun cegui_mltclmlst_destruct as delete 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

